fix(errors): report crashes on the fork's issue tracker instead of by email
The only working button on the error dialog opened a mailto: URI addressed to
worldpainter@pepsoft.org. Main.privateContext is loaded through ServiceLoader and
exists only in pepsoft's own distribution, so in this fork the dialog always ends
up in REPORTING_DISABLED and that email was the single route a user had: every
crash in a localization fork was pointed at the author of the original program,
who cannot fix it and never asked to receive it.

The button now copies the report to the clipboard and opens
https://github.com/saplome/WorldPainter-LANGUAGES/issues. A GitHub issue cannot
be prefilled from a URL, and the report — stack trace, system properties, world
metadata — would be far too long for a query string in any case, so the clipboard
carries the text and the confirmation tells the user to paste it into a new issue.

The Desktop.Action.MAIL capability check went with the mailto URI and has no
counterpart: DesktopUtils.open(URL) tries java.awt.Desktop first and then falls
back to xdg-open, open or start, so isDesktopSupported() says nothing about
whether a browser will actually open. The button is therefore enabled
unconditionally, and because the clipboard is filled before the browser is
touched it stays useful when nothing opens — that failure path reports the URL
so the user can reach the tracker by hand.

In the bundles seven keys are renamed after what they now say, the two that
described emailing are dropped, and informationCopied.message takes the tracker
URL as {0}. All eleven locales are translated, not only English, and no value
mentions worldpainter@pepsoft.org any more.

The upstream SEND_AUTOMATICALLY and SEND_MANUALLY paths are left untouched. They
are unreachable without privateContext, but keeping them keeps merges from
upstream clean.